--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "bootstrap": "^4.0.0",
+    "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "gmail-send": "^1.2.14",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
+    "mysql": "github:mysqljs/mysql",
+    "npm": "^5.8.0",
+    "peer": "^0.2.8",
+    "popper.js": "^1.14.3",
+    "promise-mysql": "^3.2.1",
+    "puppeteer": "^1.2.0",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "serve-favicon": "~2.4.5"
   }
 }
